--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/Tyanote_Logo.svg" type="image/x-icon">
-  <title>Tyanote</title>
+  <title>Tyanote Admin</title>
 </head>
 
 <body class="bg-background">
